// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`services/popup/components/createPopupHOC basic rendering 1`] = `
<_class
  popupOptions={Object {}}
>
  <div>
    <div
      className="an-popup-wrapper undefined"
      style={Object {}}
    >
      <MockCompnent
        onResize={[Function]}
      >
        <div
          className="mock-component"
        >
          Mock Compoent
        </div>
      </MockCompnent>
    </div>
  </div>
</_class>
`;

exports[`services/popup/components/createPopupHOC basic rendering 2`] = `
<_class
  popupOptions={
    Object {
      "closeByClick": true,
      "effect": "fade",
      "showShadow": true,
    }
  }
>
  <div>
    <div
      className="an-popup-desk"
      onClick={[Function]}
      onMouseDown={[Function]}
    />
    <div
      className="an-popup-wrapper an-fade-enter an-popup-shadow undefined"
      style={Object {}}
    >
      <MockCompnent
        onResize={[Function]}
      >
        <div
          className="mock-component"
        >
          Mock Compoent
        </div>
      </MockCompnent>
    </div>
  </div>
</_class>
`;

exports[`services/popup/components/createPopupHOC basic rendering 3`] = `
<_class>
  <div>
    <div
      className="an-popup-wrapper an-fade-enter undefined"
      style={
        Object {
          "left": "-2000px",
          "top": "-2000px",
        }
      }
    >
      <MockCompnent
        onResize={[Function]}
      >
        <div
          className="mock-component"
        >
          Mock Compoent
        </div>
      </MockCompnent>
    </div>
  </div>
</_class>
`;

exports[`services/popup/components/createPopupHOC basic rendering 4`] = `
<_class
  popupOptions={
    Object {
      "showMask": true,
    }
  }
>
  <div>
    <div
      className="an-popup-desk an-popup-mask"
      onClick={[Function]}
      onMouseDown={[Function]}
    />
    <div
      className="an-popup-wrapper an-fade-enter undefined"
      style={
        Object {
          "left": "-2000px",
          "top": "-2000px",
        }
      }
    >
      <MockCompnent
        onResize={[Function]}
      >
        <div
          className="mock-component"
        >
          Mock Compoent
        </div>
      </MockCompnent>
    </div>
  </div>
</_class>
`;

exports[`services/popup/components/createPopupHOC basic rendering 5`] = `
<_class
  connectors={
    Object {
      "testConnector": [Function],
    }
  }
  initProps={Object {}}
  popupOptions={
    Object {
      "showMask": true,
    }
  }
>
  <div>
    <div
      className="an-popup-desk an-popup-mask"
      onClick={[Function]}
      onMouseDown={[Function]}
    />
    <div
      className="an-popup-wrapper an-fade-enter undefined"
      style={
        Object {
          "left": "-2000px",
          "top": "-2000px",
        }
      }
    >
      <MockCompnent
        onResize={[Function]}
        testConnector={[Function]}
      >
        <div
          className="mock-component"
        >
          Mock Compoent
        </div>
      </MockCompnent>
    </div>
  </div>
</_class>
`;

exports[`services/popup/components/createPopupHOC lifecycles - changing 1`] = `
<_class
  popupEvents={
    Object {
      "onPopupChange": [Function],
    }
  }
  popupOptions={
    Object {
      "dockStyle": "top left",
    }
  }
>
  <div>
    <div
      className="an-popup-wrapper undefined"
      style={Object {}}
    >
      <MockCompnent
        dockStyle="top left"
        onResize={[Function]}
        popupEvents={
          Object {
            "onPopupChange": [Function],
          }
        }
      >
        <div
          className="mock-component"
        >
          Mock Compoent
        </div>
      </MockCompnent>
    </div>
  </div>
</_class>
`;

exports[`services/popup/components/createPopupHOC lifecycles - changing 2`] = `
<_class
  popupEvents={
    Object {
      "onPopupChange": [Function],
    }
  }
  popupOptions={
    Object {
      "dockStyle": "top left",
      "effect": "fade",
    }
  }
>
  <div>
    <div
      className="an-popup-wrapper an-fade-exit undefined"
      style={Object {}}
    >
      <MockCompnent
        dockStyle="top left"
        onResize={[Function]}
        popupEvents={
          Object {
            "onPopupChange": [Function],
          }
        }
      >
        <div
          className="mock-component"
        >
          Mock Compoent
        </div>
      </MockCompnent>
    </div>
  </div>
</_class>
`;

exports[`services/popup/components/createPopupHOC lifecycles - changing 3`] = `
<_class
  popupEvents={Object {}}
  popupOptions={
    Object {
      "dockStyle": "top left",
      "effect": "none",
    }
  }
>
  <div>
    <div
      className="an-popup-wrapper undefined"
      style={Object {}}
    >
      <MockCompnent
        dockStyle="top left"
        onResize={[Function]}
        popupEvents={Object {}}
      >
        <div
          className="mock-component"
        >
          Mock Compoent
        </div>
      </MockCompnent>
    </div>
  </div>
</_class>
`;

exports[`services/popup/components/createPopupHOC lifecycles - opening 1`] = `
<_class
  popupOptions={
    Object {
      "distance": 10,
      "dockStyle": "top left",
    }
  }
>
  <div>
    <div
      className="an-popup-wrapper undefined"
      style={
        Object {
          "left": 0,
          "top": -10,
        }
      }
    >
      <MockCompnent
        dockStyle="top left"
        onResize={[Function]}
      >
        <div
          className="mock-component"
        >
          Mock Compoent
        </div>
      </MockCompnent>
    </div>
  </div>
</_class>
`;

exports[`services/popup/components/createPopupHOC lifecycles - opening 2`] = `
<_class
  popupOptions={
    Object {
      "closeWhenViewChange": true,
      "distance": 10,
      "dockStyle": "left top",
      "focus": true,
      "onAfterOpen": [Function],
    }
  }
>
  <div>
    <div
      className="an-popup-wrapper undefined"
      style={
        Object {
          "left": -10,
          "top": 0,
        }
      }
    >
      <MockCompnent
        dockStyle="left top"
        onResize={[Function]}
      >
        <div
          className="mock-component"
        >
          Mock Compoent
        </div>
      </MockCompnent>
    </div>
  </div>
</_class>
`;

exports[`services/popup/components/createPopupHOC lifecycles - opening 3`] = `
<_class
  popupOptions={
    Object {
      "distance": 10,
      "dockStyle": "right top",
    }
  }
>
  <div>
    <div
      className="an-popup-wrapper undefined"
      style={
        Object {
          "left": 10,
          "top": 0,
        }
      }
    >
      <MockCompnent
        dockStyle="right top"
        onResize={[Function]}
      >
        <div
          className="mock-component"
        >
          Mock Compoent
        </div>
      </MockCompnent>
    </div>
  </div>
</_class>
`;

exports[`services/popup/components/createPopupHOC lifecycles - opening 4`] = `
<_class
  popupOptions={
    Object {
      "closeWhenViewChange": true,
      "distance": 10,
      "dockStyle": "test test",
    }
  }
>
  <div>
    <div
      className="an-popup-wrapper undefined"
      style={
        Object {
          "left": 0,
          "top": 0,
        }
      }
    >
      <MockCompnent
        dockStyle="test test"
        onResize={[Function]}
      >
        <div
          className="mock-component"
        >
          Mock Compoent
        </div>
      </MockCompnent>
    </div>
  </div>
</_class>
`;

exports[`services/popup/components/createPopupHOC lifecycles - opening 5`] = `
<_class
  popupOptions={
    Object {
      "closeWhenViewChange": true,
      "distance": 10,
      "dockStyle": "test test",
    }
  }
>
  <div>
    <div
      className="an-popup-wrapper undefined"
      style={
        Object {
          "left": 0,
          "top": 0,
        }
      }
    >
      <MockCompnent
        dockStyle="test test"
        onResize={[Function]}
      >
        <div
          className="mock-component"
        >
          Mock Compoent
        </div>
      </MockCompnent>
    </div>
  </div>
</_class>
`;
